--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/fonts/fonts.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -99,7 +100,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/fonts/fonts.css"
             ],
             "scripts": []
           }
